--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "@react-three/drei": "^9.117.3",
     "@react-three/fiber": "^8.17.10",
     "@react-three/rapier": "^1.5.0",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.9.3",
     "@types/three": "^0.170.0",
     "autoprefixer": "^10.4.20",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "framer-motion": "^11.11.17",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
@@ -35,7 +39,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
-    "typescript": "~5.6.2",
+    "typescript": "^5.7.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10"
   },
