feat: fix env + add yarn start

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-VITE_PROD_URL=https://fish3.rmfosho.me
-VITE_DEV_URL=https://fish2.rmfosho.me
+VITE_PROD_URL=https://fish.rmfosho.me
+VITE_DEV_URL=https://fish3.rmfosho.me
 
-VITE_PROD_WS_URL=wss://fish3.rmfosho.me
+VITE_PROD_WS_URL=wss://fish.rmfosho.me
 VITE_DEV_WS_URL=wss://fish2.rmfosho.me
