--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "framer-motion": "^11.11.17",
+    "lodash": "^4.17.21",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
